@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Documentation fixes
+  - Require more recent Text::ParseWords to avoid bugs in
+    Text::ParseWords
+  - Handle situation where temp directory is mounted
+    noexec
 
 0.14      2017-03-23 22:10:24 -0400
   - Documentation fixes.
